--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,23 +35,24 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_sign_in: 
-  firebase_auth: 
-  firebase_core: 
-  get: 
-  get_storage: 
-  google_fonts: 
-  http: 
-  flutter_facebook_auth: 
-  badges: 
-  smooth_page_indicator: 
-  carousel_slider: 
-  flutter_rating_bar: 
-  flutter_simple_rating_bar: 
-  readmore: 
-  geolocator: 
-  geocoding: 
-  pay: 
+  # google_sign_in: ^6.0.2
+  # firebase_auth: ^4.3.0
+  # firebase_core: ^2.8.0 
+  get: ^4.6.5
+  get_storage: ^2.1.1
+  google_fonts: ^4.0.3
+  # http: ^0.13.5
+  # path_provider:
+  # flutter_facebook_auth: 
+  # badges: 
+  # smooth_page_indicator: 
+  # carousel_slider: 
+  # flutter_rating_bar: 
+  # flutter_simple_rating_bar: 
+  # readmore: 
+  # geolocator: 
+  # geocoding: 
+  # pay: 
 
 dev_dependencies:
   flutter_test:
@@ -76,8 +77,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
