--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   # google_sign_in: ^6.0.2
   # firebase_auth: ^4.3.0
-  # firebase_core: ^2.8.0 
+  firebase_core: ^2.8.0 
   get: ^4.6.5
   get_storage: ^2.1.1
   google_fonts: ^4.0.3
