--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,21 +35,21 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  # google_sign_in: ^6.0.2
-  # firebase_auth: ^4.3.0
+  google_sign_in: ^6.0.2
+  firebase_auth: ^4.3.0
   firebase_core: ^2.8.0 
   get: ^4.6.5
   get_storage: ^2.1.1
   google_fonts: ^4.0.3
-  # http: ^0.13.5
+  http: ^0.13.5
   # path_provider:
   # flutter_facebook_auth: 
-  # badges: 
-  # smooth_page_indicator: 
-  # carousel_slider: 
-  # flutter_rating_bar: 
+  badges: ^3.0.2 
+  smooth_page_indicator: 
+  carousel_slider: 
+  flutter_rating_bar: ^4.0.1 
   # flutter_simple_rating_bar: 
-  # readmore: 
+  readmore: 
   # geolocator: 
   # geocoding: 
   # pay: 
